cmake_minimum_required(VERSION 2.8)
project( DisplayCamera )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayCamera DisplayCamera.cpp )
target_link_libraries( DisplayCamera ${OpenCV_LIBS} pigpio})
find_package(MySQL REQUIRED)
include_directories(${MYSQL_INCLUDE_DIR})
target_link_libraries(DisplayCamera ${MYSQL_LIBRARY})